--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           <li><a href="https://mdundo.com/song/2733938" target="_blank">Mdundo</a></li>
           <li><a href="https://instagram.com/YOUR_INSTAGRAM_HANDLE" target="_blank">Instagram</a></li>
           <li><a href="https://www.reverbnation.com/your_reverbnation_profile" target="_blank">ReverbNation</a></li>
-          <li><a href="https://www.boomplay.com/artists/your_boomplay_profile" target="_blank">Boomplay</a></li>
+          <li><a href="https://www.boomplay.com/artists/80585572?srModel=COPYLINK&srList=WEB">Boomplay</a></li>
           <li><a href="https://www.tiktok.com/@your_tiktok_handle" target="_blank">TikTok</a></li>
           <li><a href="https://www.linkedin.com/in/your_linkedin_profile" target="_blank">LinkedIn</a></li>
         </ul>
