--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <ul class="dropdown-content">
           <li><a href="https://www.youtube.com/channel/UCCn5DpNTYebQsWug3H0s2VQ/videos" target="_blank">YouTube</a></li>
           <li><a href="https://mdundo.com/a/20200>Mdundo</a></li>
-          <li><a href="https://instagram.com/YOUR_INSTAGRAM_HANDLE" target="_blank">Instagram</a></li>
+          <li><a href="https://www.instagram.com/bob_10_mziki">Instagram</a></li>
           <li><a href="http://www.reverbnation.com/open_graph/artist/5567925">ReverbNation</a></li>
           <li><a href="https://www.boomplay.com/artists/80585572?srModel=COPYLINK&srList=WEB">Boomplay</a></li>
           <li><a href="https://www.tiktok.com/@your_tiktok_handle" target="_blank">TikTok</a></li>
