--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
           <li><a href="https://www.instagram.com/bob_10_mziki">Instagram</a></li>
           <li><a href="http://www.reverbnation.com/open_graph/artist/5567925">ReverbNation</a></li>
           <li><a href="https://www.boomplay.com/artists/80585572?srModel=COPYLINK&srList=WEB">Boomplay</a></li>
-          <li><a href="https://www.tiktok.com/@your_tiktok_handle" target="_blank">TikTok</a></li>
-          <li><a href="https://www.linkedin.com/in/your_linkedin_profile" target="_blank">LinkedIn</a></li>
+          <li><a href="https://www.tiktok.com/@me.bobby?_t=8r1jubfFXld&_r=1">TikTok</a></li>
+          <li><a href="https://www.linkedin.com/in/peter-nyamari-40b0b7251?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">LinkedIn</a></li>
         </ul>
       </li>
     </ul>
