--- a/index.html
+++ b/index.html
@@ -278,13 +278,13 @@
       <li class="dropdown">
         <a href="#social">Links</a>
         <ul class="dropdown-content">
-          <li><a href="https://www.youtube.com/channel/UCCn5DpNTYebQsWug3H0s2VQ/videos" target="_blank">YouTube</a></li>
-          <li><a href="https://mdundo.com/a/20200>Mdundo</a></li>
-          <li><a href="https://www.instagram.com/bob_10_mziki">Instagram</a></li>
-          <li><a href="http://www.reverbnation.com/open_graph/artist/5567925">ReverbNation</a></li>
-          <li><a href="https://www.boomplay.com/artists/80585572?srModel=COPYLINK&srList=WEB">Boomplay</a></li>
-          <li><a href="https://www.tiktok.com/@me.bobby?_t=8r1jubfFXld&_r=1">TikTok</a></li>
-          <li><a href="https://www.linkedin.com/in/peter-nyamari-40b0b7251?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">LinkedIn</a></li>
+          <li><a href="https://www.youtube.com/channel/UCCn5DpNTYebQsWug3H0s2VQ/videos" target="_blank" rel="noopener noreferrer">YouTube</a></li>
+    <li><a href="https://mdundo.com/a/20200" target="_blank" rel="noopener noreferrer">Mdundo</a></li>
+    <li><a href="https://www.instagram.com/bob_10_mziki" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+    <li><a href="http://www.reverbnation.com/open_graph/artist/5567925" target="_blank" rel="noopener noreferrer">ReverbNation</a></li>
+    <li><a href="https://www.boomplay.com/artists/80585572?srModel=COPYLINK&srList=WEB" target="_blank" rel="noopener noreferrer">Boomplay</a></li>
+    <li><a href="https://www.tiktok.com/@me.bobby?_t=8r1jubfFXld&_r=1" target="_blank" rel="noopener noreferrer">TikTok</a></li>
+    <li><a href="https://www.linkedin.com/in/peter-nyamari-40b0b7251?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
         </ul>
       </li>
     </ul>
