--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
     <h2>Get in Touch</h2>
     <p>I'd love to hear from you! Feel free to reach out through my social media links.</p>
     <a href="mailto:peternyamari70@gmail.com" class="button">Send Email</a>
+    <a href="tel:+254705672898" class="button">Call Me</a>
   </section>
 
   <!-- Footer -->
